<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_bot_16"
        tools:context="com.example.android.justjava2.MainActivity">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bot_16"
            android:layout_marginLeft="@dimen/margin_bot_16"
            android:layout_marginStart="@dimen/margin_bot_16"
            android:hint="@string/name"
            android:inputType="textCapWords"
            android:textSize="@dimen/edittext_16" />


        <EditText
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bot_16"
            android:layout_marginLeft="@dimen/margin_bot_16"
            android:layout_marginStart="@dimen/margin_bot_16"
            android:hint="@string/get_order_summary_on_this_email"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/edittext_16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bot_16"
            android:layout_marginLeft="@dimen/margin_bot_16"
            android:layout_marginStart="@dimen/margin_bot_16"
            android:text="@string/topping"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="@dimen/text_18" />

        <CheckBox
            android:id="@+id/whippedCream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bot_16"
            android:layout_marginLeft="@dimen/margin_bot_16"
            android:layout_marginStart="@dimen/margin_bot_16"
            android:paddingLeft="@dimen/pad_24"
            android:paddingRight="@dimen/pad_24"
            android:paddingStart="@dimen/pad_24"
            android:text="@string/whipped_cream"
            android:textStyle="italic|bold"
            android:textSize="@dimen/text_16" />

        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bot_16"
            android:layout_marginLeft="@dimen/margin_bot_16"
            android:layout_marginStart="@dimen/margin_bot_16"
            android:paddingLeft="@dimen/pad_24"
            android:paddingRight="@dimen/pad_24"
            android:paddingStart="@dimen/pad_24"
            android:text="@string/chocolate"
            android:textSize="@dimen/text_16" />


        <CheckBox
            android:id="@+id/iceCream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bot_16"
            android:layout_marginLeft="@dimen/margin_bot_16"
            android:layout_marginStart="@dimen/margin_bot_16"
            android:paddingLeft="@dimen/pad_24"
            android:paddingStart="@dimen/pad_24"
            android:paddingRight="@dimen/pad_24"
            android:text="@string/icecream"
            android:textSize="@dimen/text_16" />


        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bot_16"
            android:layout_marginLeft="@dimen/margin_bot_16"
            android:layout_marginStart="@dimen/margin_bot_16"
            android:text="@string/QUANTITY"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="@dimen/text_16" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/dec"
                android:layout_width="@dimen/button_48"
                android:layout_height="@dimen/button_48"
                android:layout_marginLeft="@dimen/margin_bot_16"
                android:layout_marginStart="@dimen/margin_bot_16"
                android:onClick="decrement"
                android:text="@string/decre"
                android:background="@drawable/round_button"
                android:textSize="@dimen/text_16" />


            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/quan_txt_8"
                android:layout_marginRight="@dimen/quan_txt_8"
                android:text="@string/_1"
                android:textColor="#000000"
                android:textSize="@dimen/text_16" />


            <Button
                android:id="@+id/inc"
                android:layout_width="@dimen/button_48"
                android:layout_height="@dimen/button_48"
                android:onClick="increment"
                android:text="@string/incre"
                android:textAllCaps="true"
                android:background="@drawable/round_button"
                android:textSize="@dimen/text_16" />
        </LinearLayout>


        <Button
            android:layout_gravity="center"
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_bot_16"
            android:layout_marginStart="@dimen/margin_bot_16"
            android:layout_marginTop="@dimen/order_top_40"
            android:onClick="submitOrder"
            android:text="@string/order"
            android:background="@drawable/order_button"
            android:textAllCaps="true"
            android:textSize="@dimen/text_16" />

    </LinearLayout>
</ScrollView>